# tessalatrix

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md  config.h.in  version.h.in
.github/workflows/: cmake.yml
assets/: title.aseprite
assets-src/: game-sprites.aseprite  hst-sprites.aseprite  menu-sprites-5.aseprite  menu-sprites.aseprite  metrics-sprites.aseprite  over-sprites.aseprite  text-sprites.aseprite
src/: CMakeLists.txt  config.c  display.c  game.c  hiscore.c  hstable.c  log.c  menu.c  metrics.c  over.c  piece.c  splash.c  tessalatrix.c  tessalatrix.h  text.c  util.c
vs/sdl/: sdl2-config.cmake
